--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://logowik.com/content/uploads/images/university-of-ghana9757.jpg" alt="ug" /> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>University of Ghana Student Grade Reporting System</title>
   </head>
