--- a/project/public/index.html
+++ b/project/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -9,6 +10,12 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link
+  rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+  integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
+  crossorigin="anonymous"
+/>
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -23,9 +30,6 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Gemunu+Libre&display=swap" rel="stylesheet">
     <title>Student Self Service</title>
     <link rel="icon" href="favicon.jpg" type="image / favicon">
 
@@ -42,6 +46,37 @@
 
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
+
+
+      <div className='row'>
+                        {/*Column1*/}
+                        <div className='col'>
+                            <h4>Akpalu Emmanuel</h4>
+                            <ul className='list'>
+                                <li>9944954954</li>
+                                <li>Kasoa Kaemebre</li>
+                                <li>123 street siuth north</li>
+                            </ul>
+                        </div>
+                        {/*column2*/}
+                        <div className='col'>
+                            <h4>Staff</h4>
+                            <ul className='list'>
+                                <li>fff</li>
+                                <li>oTEHR</li>
+                                <li>gOOD</li>
+                            </ul>
+                        </div>
+                        {/*column3*/}
+                        <div className='col'>
+                            <h4>Another Column</h4>
+                            <ul className='list'>
+                                <li>fff</li>
+                                <li>oTEHR</li>
+                                <li>gOOD</li>
+                            </ul>
+                        </div>
+                    </div>
     -->
   </body>
 </html>
