--- a/Dashboard.html
+++ b/Dashboard.html
@@ -100,6 +100,12 @@
         <div class="alert">
             <p>Alert: You have a missing grade for Chemistry. Please update it.</p>
         </div>
-    </div>
+        <footer>
+            <div class="container">
+                <p>Contact Us: +233 203 228 187 | +233 547 686 651 | <a href="mailto:eborizina@st.ug.edu.gh">dcs@ug.edu.gh</a></p>
+            <p>Location: University Of Ghana, Legon Campus (Opposite Mathematics Department)</p>
+                <p>&copy; 2023 Missing Grade Reporting System. All rights reserved.</p>
+            </div>
+            </footer>
 </body>
 </html>
