--- a/missinggrade.html
+++ b/missinggrade.html
@@ -11,8 +11,62 @@
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     />
     <title>Missing Grades Report</title>
+    <style>
+      .ug {
+        height: 70px;
+        width: 60px;
+      }
+
+      .footer {
+        background-color: #343a40;
+        color: #ffffff;
+        padding: 30px 0;
+      }
+      .footer a {
+        color: #ffffff;
+      }
+      .social-icons i {
+        font-size: 24px;
+        margin-right: 10px;
+      }
+    </style>
   </head>
   <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+      <img class="ug" src="ug logo.png" alt="" />
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarNav"
+        aria-controls="navbarNav"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="home.html"
+              >Home <span class="sr-only">(current)</span></a
+            >
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="login.html">Login </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="dashboard.html">Dashboard</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="support.html">Help and Support</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <br />
+    <br />
+    <br />
     <div class="container mt-5">
       <h2 class="mb-4">Report Missing Grades</h2>
 
@@ -59,5 +113,30 @@
           document.getElementById("successMessage").style.display = "block";
         });
     </script>
+    <br />
+    <br />
+    <br />
+
+    <footer class="footer">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <h4>Contact Us</h4>
+            <p>Email: info@example.com</p>
+            <p>Phone: +1 (123) 456-7890</p>
+          </div>
+          <div class="col-md-6">
+            <h4>For More Enquiries</h4>
+            <a href="support.html">Help and Support</a>
+            <div class="social-icons">
+              <a href="#" target="_blank"><i class="fab fa-facebook"></i></a>
+              <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
+              <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
+              <a href="#" target="_blank"><i class="fab fa-linkedin"></i></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
