--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
 <nav>
     <div class="nav-linked"></div>
     <a href="view_grades.html">View Grades</a>
-    <a href="#report-missing">Report Missing Grades</a>
+    <a href="Report_Missing.html">Report Missing Grades</a>
     <a href="Dashboard.html">Dashboard</a>
-    <a href="#Grading-System ">Grading System</a>
-    <a href="#contact">Contact</a>
+    <a href="GradingSystem.html">Grading System</a>
+    <a href="contact.html">Contact</a>
 </nav>
 <footer>
 <div class="container">
