--- a/Assignment 1/index.html
+++ b/Assignment 1/index.html
@@ -5,14 +5,11 @@
     <meta name="viewport" content="width, initial-scale=1.0">
     <title>landing page</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" 
-    <link rel="stylesheet" href="style.css">
+    rel="stylesheet" href="style.css">
     <integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" 
     crossorigin="anonymous">
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" 
-integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" 
-crossorigin="anonymous">
-</script>
+
 
 </head>
 <body style="background-image: url('book.jpg'); background-size: cover; background-repeat: no-repeat;">
@@ -51,15 +48,40 @@ crossorigin="anonymous">
       </div>
     </div>
   </nav>
+  <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+    <div class="content" style= "text-align: center; color: burlywood; " >
+      <h1>Welcome to The Report Landing Page </h1>
+      <h4 >HAVING DIFFICULTY FINDING AND CHECKING RESULTS?</h4>
+      <p>Log In To Check Reports And Report Errors</p>
+      <a href="LOGIN.HTML" class="btn btn-primary" style="background-color: burlywood;color: black;">LOG IN</a>
+  </div>
 
-    <p><div class="content" style="color: burlywood; align-items: center;">
-        <h1>Welcome to The Report Landing Page </h1>
-        <p>Log In To Check Reports And Report Errors</p>
-        <a href="LOGIN.HTML" class="btn btn-primary" style="background-color: burlywood;color: black;">LOG IN</a>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="book.jpg" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="book.jpg" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="book.jpg" class="d-block w-100" alt="...">
+      </div>
     </div>
-</div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
 
 
+
+
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
 </body>
 </html>
 
