--- a/public/index.html
+++ b/public/index.html
@@ -9,11 +9,14 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    />
 
     <title>Missing Grade Report</title>
   </head>
   <body>
-    <img src="./download.jpeg" alt="" />
     <div id="root"></div>
   </body>
 </html>
