--- a/Login.html
+++ b/Login.html
@@ -316,16 +316,24 @@ header nav ul li a.active {
                     <a href="Home.jsx" class="active">Dashboard</a>
                 </li>
                 <li>
-                    <a href="">Portfolio</a>
+                    <a href="Login.html" > Sign-in </a>
                 </li>
                 <li>
                     <a href="Missing-Grade-Form-Page.html">Grade Form</a>
                 </li>
                 <li>
-                    <a href="">Services</a>
+                    <a href="">Grade Report</a>
                 </li>
                 <li>
-                    <a href="">About</a>
+                    <a href="Help-page.html">Help Page</a>
+                </li>
+
+                <li>
+                    <a href="contact.html" >Contact</a>
+                </li>
+
+                <li>
+                    <a href="About.html" >About</a>
                 </li>
             </ul>
         </nav>
