--- a/Missing-Grade-Form-Page.html
+++ b/Missing-Grade-Form-Page.html
@@ -271,34 +271,42 @@ header nav ul li a.active {
 <body>
 
 
-    <header>
-        <div class="logo">Missing Report.</div>
-        <input type="checkbox" id="nav_check" hidden>
-        <nav>
-            <ul>
-                <li>
-                    <a href="Home.jsx" class="active">Dashboard</a>
-                </li>
-                <li>
-                    <a href="">Portfolio</a>
-                </li>
-                <li>
-                    <a href="Missing-Grade-Form-Page.html">Grade Form</a>
-                </li>
-                <li>
-                    <a href="">Services</a>
-                </li>
-                <li>
-                    <a href="">About</a>
-                </li>
-            </ul>
-        </nav>
-        <label for="nav_check" class="hamburger">
-            <div></div>
-            <div></div>
-            <div></div>
-        </label>
-    </header>
+  <header>
+    <div class="logo">Missing Report.</div>
+    <input type="checkbox" id="nav_check" hidden>
+    <nav>
+        <ul>
+            <li>
+                <a href="Home.jsx" class="active">Dashboard</a>
+            </li>
+            <li>
+                <a href="Login.html" > Sign-in </a>
+            </li>
+            <li>
+                <a href="Missing-Grade-Form-Page.html">Grade Form</a>
+            </li>
+            <li>
+                <a href="">Grade Report</a>
+            </li>
+            <li>
+                <a href="Help-page.html">Help Page</a>
+            </li>
+
+            <li>
+                <a href="contact.html" >Contact</a>
+            </li>
+
+            <li>
+                <a href="About.html" >About</a>
+            </li>
+        </ul>
+    </nav>
+    <label for="nav_check" class="hamburger">
+        <div></div>
+        <div></div>
+        <div></div>
+    </label>
+</header>
 
 <div class="wrapper">
     <div class="title">
