--- a/contact.html
+++ b/contact.html
@@ -248,9 +248,130 @@
         }
 
 
+
+
+        * {
+    margin: 0;
+    padding: 0;
+    text-decoration: none;
+    list-style: none;
+    box-sizing: border-box;
+}
+
+
+header {
+    background: dodgerblue;
+    color: white;
+    width: 100%;
+    height: 65px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 50px;
+}
+header .logo {
+    font-size: 30px;
+    text-transform: uppercase;
+}
+header nav ul {
+    display: flex;
+}
+header nav ul li a {
+    display: inline-block;
+    color: white;
+    padding: 5px 0;
+    margin: 0 10px;
+    border: 3px solid transparent;
+    text-transform: uppercase;
+    transition: 0.2s;
+}
+header nav ul li a:hover,
+header nav ul li a.active {
+    border-bottom-color: dodgerblue;
+}
+.hamburger {
+    cursor: pointer;
+    display: none;
+}
+.hamburger div {
+    width: 30px;
+    height: 3px;
+    margin: 5px 0;
+    background: #000;
+}
+@media only screen and (max-width: 900px) {
+    header {
+        padding: 0 30px;
+    }
+}
+@media only screen and (max-width: 700px) {
+    .hamburger {
+        display: block;
+    }
+    header nav {
+        position: absolute;
+        width: 100%;
+        left: -100%;
+        top: 70px;
+        width: 100%;
+        background: #fff;
+        padding: 30px;
+        transition: 0.3s;
+    }
+    header #nav_check:checked ~ nav {
+        left: 0;
+    }
+    header nav ul {
+        display: block;
+    }
+    header nav ul li a {
+        margin: 5px 0;
+    }
+}
+
     </style>
 </head>
 <body>
+
+    <header>
+        <div class="logo">Missing Report.</div>
+        <input type="checkbox" id="nav_check" hidden>
+        <nav>
+            <ul>
+                <li>
+                    <a href="Home.jsx" class="active">Dashboard</a>
+                </li>
+                <li>
+                    <a href="Login.html" > Sign-in </a>
+                </li>
+                <li>
+                    <a href="Missing-Grade-Form-Page.html">Grade Form</a>
+                </li>
+                <li>
+                    <a href="">Grade Report</a>
+                </li>
+                <li>
+                    <a href="Help-page.html">Help Page</a>
+                </li>
+
+                <li>
+                    <a href="contact.html" >Contact</a>
+                </li>
+
+                <li>
+                    <a href="About.html" >About</a>
+                </li>
+            </ul>
+        </nav>
+        <label for="nav_check" class="hamburger">
+            <div></div>
+            <div></div>
+            <div></div>
+        </label>
+    </header>
+
+
+
 	<div class="container">
 		<main class="row">
 			
@@ -262,7 +383,7 @@
 
 				<div class="contactTitle">
 					<h2>Get In Touch</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+					<p>Contact us to get updated about your Acadamic Excellence</p>
 				</div>
 
 				<!--  *******   Title Ends   *******  -->
@@ -287,7 +408,7 @@
 						</div>
 						<div class="details">
 							<span>Email</span>
-							<span>name.tutorial@gmail.com</span>
+							<span>username@gmail.com</span>
 						</div>
 					</div>
 
@@ -297,7 +418,7 @@
 						</div>
 						<div class="details">
 							<span>Location</span>
-							<span>X Street, Y Road, San Fransisco</span>
+							<span>X Street, Y Road, Ghana</span>
 						</div>
 					</div>
 
@@ -363,49 +484,7 @@
 	</div>
 
 
-  <footer class="footer">
-  	 <div class="container">
-  	 	<div class="row">
-  	 		<div class="footer-col">
-  	 			<h4>company</h4>
-  	 			<ul>
-  	 				<li><a href="#">about us</a></li>
-  	 				<li><a href="#">our services</a></li>
-  	 				<li><a href="#">privacy policy</a></li>
-  	 				<li><a href="#">affiliate program</a></li>
-  	 			</ul>
-  	 		</div>
-  	 		<div class="footer-col">
-  	 			<h4>get help</h4>
-  	 			<ul>
-  	 				<li><a href="#">FAQ</a></li>
-  	 				<li><a href="#">shipping</a></li>
-  	 				<li><a href="#">returns</a></li>
-  	 				<li><a href="#">order status</a></li>
-  	 				<li><a href="#">payment options</a></li>
-  	 			</ul>
-  	 		</div>
-  	 		<div class="footer-col">
-  	 			<h4>online shop</h4>
-  	 			<ul>
-  	 				<li><a href="#">watch</a></li>
-  	 				<li><a href="#">bag</a></li>
-  	 				<li><a href="#">shoes</a></li>
-  	 				<li><a href="#">dress</a></li>
-  	 			</ul>
-  	 		</div>
-  	 		<div class="footer-col">
-  	 			<h4>follow us</h4>
-  	 			<div class="social-links">
-  	 				<a href="#"><i class="fab fa-facebook-f"></i></a>
-  	 				<a href="#"><i class="fab fa-twitter"></i></a>
-  	 				<a href="#"><i class="fab fa-instagram"></i></a>
-  	 				<a href="#"><i class="fab fa-linkedin-in"></i></a>
-  	 			</div>
-  	 		</div>
-  	 	</div>
-  	 </div>
-  </footer>
+  
 
 </body>
 </html>
