--- a/Missing-Grade-Form-Page.html
+++ b/Missing-Grade-Form-Page.html
@@ -286,7 +286,7 @@ header nav ul li a.active {
                 <a href="Missing-Grade-Form-Page.html">Grade Form</a>
             </li>
             <li>
-                <a href="">Grade Report</a>
+                <a href="Grade-report.html">Grade Report</a>
             </li>
             <li>
                 <a href="Help-page.html">Help Page</a>
