--- a/my-project/public/index.html
+++ b/my-project/public/index.html
@@ -13,7 +13,7 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>React App</title>
+    <title>Grade Management System</title>
     
     <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet" />
 
