Some fixes in the dashboard page and other pages

--- a/frontend-grading-assignment/index.html
+++ b/frontend-grading-assignment/index.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Grading System</title>
+    
+    <!-- <link rel="stylesheet" href="https://cdn.datatables.net/1.13.7/css/dataTables.bootstrap.min.css">
+
+    <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
+    <script src="https://cdn.datatables.net/1.13.7/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/1.13.7/js/dataTables.bootstrap.min.js"></script> -->
+    
   </head>
   <body>
     <div id="root"></div>
+
+    <!-- <script>
+      const table = new DataTable("#example")
+    </script> -->
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
