--- a/public/index.html
+++ b/public/index.html
@@ -31,15 +31,16 @@
     <!-- Add these links to your HTML file's head section -->
     <link
       rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/5.3.2/css/bootstrap.min.css"
     />
+
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
-    <title>React App</title>
+    <title>Missing Grades System</title>
   </head>
-  <body style=" margin-top: 70px">
+  <body style="margin-top: 70px;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
 
