--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
 
     <title>Missing Grades System</title>
   </head>
-  <body style="margin-top: 70px;">
+  <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
 
