--- a/grade-frontend/public/index.html
+++ b/grade-frontend/public/index.html
@@ -24,6 +24,15 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <!-- Bootstrap CSS -->
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/css/bootstrap.min.css"
+      integrity="sha384-TqjMzcm3q6koV7ld/4lL5N3S2a1LhMqQ8kqXgD7Ff6r6Vq6Lt8+5nSfV+5z4LmGC"
+      crossorigin="anonymous"
+    />
+    <!-- Bootstrap JS (Bootstrap 5 does not require jQuery or Popper.js) -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <title>React App</title>
   </head>
   <body>
