--- a/Grade-report.html
+++ b/Grade-report.html
@@ -6,12 +6,15 @@
     <title>Document</title>
 
     <style>
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap');
+
         * {
     margin: 0;
     padding: 0;
     text-decoration: none;
     list-style: none;
     box-sizing: border-box;
+    font-family: 'Montserrat', sans-serif;
 }
 
 body {
