--- a/index.html
+++ b/index.html
@@ -52,6 +52,34 @@
     <p>© 2023 Missing Grade Reporting System. All rights reserved.</p>
   </footer>
 
+
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <script>
+    // JavaScript code to handle the navigation bar toggle behavior
+    document.addEventListener('DOMContentLoaded', function () {
+      var navbarToggler = document.querySelector('.navbar-toggler');
+      var navbarCollapse = document.querySelector('.navbar-collapse');
+
+      navbarToggler.addEventListener('click', function () {
+        navbarCollapse.classList.toggle('show');
+      });
+    });
+
+
+    document.addEventListener('DOMContentLoaded', function() {
+  var navbarToggler = document.querySelector('.navbar-toggler');
+  var navbarCollapse = document.querySelector('.navbar-collapse');
+
+  navbarToggler.addEventListener('click', function() {
+    if (navbarCollapse.classList.contains('show')) {
+      navbarCollapse.style.maxHeight = null;
+    } else {
+      navbarCollapse.style.maxHeight = navbarCollapse.scrollHeight + 'px';
+    }
+  });
+});
+  </script>
+
 </body>
 
 </html>
