--- a/LandingPage.html
+++ b/LandingPage.html
@@ -46,62 +46,32 @@ header nav ul li a:hover,
 header nav ul li a.active {
     border-bottom-color: dodgerblue;
 }
-.hamburger {
-    cursor: pointer;
-    display: none;
-}
-.hamburger div {
-    width: 30px;
-    height: 3px;
-    margin: 5px 0;
-    background: #000;
-}
-@media only screen and (max-width: 900px) {
-    header {
-        padding: 0 30px;
-    }
-}
-@media only screen and (max-width: 700px) {
-    .hamburger {
-        display: block;
-    }
-    header nav {
-        position: absolute;
-        width: 100%;
-        left: -100%;
-        top: 70px;
-        width: 100%;
-        background: #fff;
-        padding: 30px;
-        transition: 0.3s;
-    }
-    header #nav_check:checked ~ nav {
-        left: 0;
-    }
-    header nav ul {
-        display: block;
-    }
-    header nav ul li a {
-        margin: 5px 0;
-    }
-}
+
 
     button{
         border: 1px solid black;
         color: dodgerblue;
     }
 
-    .btm-sde{
-        width: 500px;
-        display: flex;
-        flex-direction: column;
-        padding-top: 200px;
-        margin-left: 480px;        
-        padding-right: 100px;
-        align-items: center;
+    section {
+        padding-top: 50px;
         color: white;
+        text-align: center;
     }
 
+    section h1{
+        font-size: 100px;
+    }
+
+    section button{
+        margin-top: 20px;
+        border-radius: 10px;
+        padding: 15px 25px 15px 25px;
+        background-color: dodgerblue;
+        color: white;
+        border: none;
+        font-size: 20px;
+    }
 
     </style>
 </head>
@@ -111,7 +81,7 @@ header nav ul li a.active {
         <nav>
             <ul>
                 <li>
-                    <a href="Home.jsx" class="active">Dashboard</a>
+                    <a href="" class="active">Dashboard</a>
                 </li>
                 <li>
                     <a href="Login.html"> Sign-in </a>
@@ -120,12 +90,11 @@ header nav ul li a.active {
         </nav>
     </header>
 
-    <div class="btm-sde">
+    <section>
     <h1>Grow with Excellence</h1>
     <h2>Fast, Flexible, Accessing for Students</h2>
     <p>Monitor your Excellence to increase your potential</p>
-    <button>Get Started</button>
-    </div>
-    
+    <a href="Login.html"><button>Get Started</button></a>
+    </section>
 </body>
 </html>
