--- a/Login.html
+++ b/Login.html
@@ -301,6 +301,7 @@ header nav ul li a.active {
         margin: 5px 0;
     }
 }
+
     </style>
 </head>
 
@@ -308,7 +309,7 @@ header nav ul li a.active {
 <body>
 
     <header>
-        <div class="logo">Missing Report.</div>
+        <a href=""></a>
         <input type="checkbox" id="nav_check" hidden>
         <nav>
             <ul>
@@ -406,6 +407,7 @@ header nav ul li a.active {
             container.classList.remove("active");
         });
         </script>
+
 </body>
 
 </html>
