--- a/landingpage.html
+++ b/landingpage.html
@@ -3,12 +3,14 @@
     <head>
         <title>Landing Page</title>
         <link rel="stylesheet" href="landingpage.css">
+        <meta name="viewport" content="width=device-width" , initial-scale="1.0">
+        <meta charset="UTF-8">
     </head>
     <body>
         <nav>
             <ul class="nav_links">
                 <li class="link"><a href="#">Welcome</a></li>
-                <li class="link"><a href="gradereport.html">Missing Grade Form</a></li>
+                <li class="link"><a href="missinggform.html">Missing Grade Form</a></li>
                 <li class="link"><a href="help.html">Help & Support</a></li>
                 <li class="link"><a href="contact.html">Contact Lecturer</a></li>
             </ul>
@@ -17,10 +19,12 @@
         <div class="container">
             <div class="container_left">
                 <div class="left_content">
-                    <h4>Best Guide for bla bla</h4>
+                    <h4>Welcome to The missing Grade report page </h4>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque pellentesque dui nec nulla condimentum, quis varius urna suscipit.
-                         Pellentesque at mi at libero facilisis tempus.
+                        This website was made to assist  students to locate their Missing
+                        grades . BY just filling a simple form you can communicate to the department
+                        directly and have your grades displayed as soon as possible.
+                         
                     </p>
                 </div>
             </div>
@@ -30,8 +34,8 @@
                     <h1>ENJOY</h1>
                     <h4>Something</h4>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque pellentesque dui nec nulla condimentum, quis varius urna suscipit.
-                        Pellentesque at mi at libero facilisis tempus.
+                        Login to view your dashboard or click the grade report 
+                        button to view you respective grade.
                     </p>
                     <div class="action_btn">
                         <a href="login.html"><button class="btn primamry_btn">Login</button></a>
