--- a/login.html
+++ b/login.html
@@ -5,6 +5,7 @@
         <meta charset="UTF-8">
         <link rel="stylesheet" href="login.css">
         <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'> 
+        <meta name="viewport" content="width=device-width" , initial-scale="1.0">
     </head>
     <body>
 
@@ -13,12 +14,10 @@
             <form action="">
                 <h1>Login</h1>
                 <div class="input-box">
-                    <input type="text " placeholder="STUDENT ID" required>
-                    <box-icon name='user'></box-icon>
+                    <a href="dashboard.html"><input type="text " placeholder="STUDENT ID"></a>
                 </div>
                 <div class="input-box">
-                    <input type="password" placeholder="PIN" required>
-                    <box-icon name='lock' type='solid' ></box-icon>
+                   <a href="dashboard.html"><input type="password" placeholder="PIN"></a> 
                 </div>
 
                 <div class="remember-forgot">
