EDITED THE REMAINING PROJECTS
ADDED THE REMAINING PAGES OF THE PROJECT AS WELL AS EDITED A FEW THINGS IN THE OTHER DOCUMENTS

--- a/Assignment 1/DASHBORD.HTML
+++ b/Assignment 1/DASHBORD.HTML
@@ -38,7 +38,7 @@
                 <a class="nav-link" href="LOGIN.HTML">LOG IN</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="HELPANDSUPPORT.HTML">MISSING GRADE FORM</a>
+                <a class="nav-link" href="GRADEEPORTPAGE.HTML">MISSING GRADE FORM</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="DASHBORD.HTML">DASHBORD</a>
