--- a/Assignment 1/index.html
+++ b/Assignment 1/index.html
@@ -28,7 +28,7 @@
             <a class="nav-link" href="LOGIN.HTML">LOG IN</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="HELPANDSUPPORT.HTML">MISSING GRADE FORM</a>
+            <a class="nav-link" href="GRADEEPORTPAGE.HTML">MISSING GRADE FORM</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="DASHBORD.HTML">DASHBORD</a>
@@ -49,11 +49,11 @@
     </div>
   </nav>
   <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
-    <div class="content" style= "text-align: center; color: burlywood; " >
+    <div class="content" style= "text-align: center; color: rgb(137, 196, 230);; " >
       <h1>Welcome to The Report Landing Page </h1>
       <h4 >HAVING DIFFICULTY FINDING AND CHECKING RESULTS?</h4>
       <p>Log In To Check Reports And Report Errors</p>
-      <a href="LOGIN.HTML" class="btn btn-primary" style="background-color: burlywood;color: black;">LOG IN</a>
+      <a href="LOGIN.HTML" class="btn btn-primary" style="background-color: rgb(137, 196, 230);;coloR: black;">LOG IN</a>
   </div>
 
     <div class="carousel-inner">
@@ -61,10 +61,10 @@
         <img src="book.jpg" class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item">
-        <img src="book.jpg" class="d-block w-100" alt="...">
+        <img src="faq page.jpg" class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item">
-        <img src="book.jpg" class="d-block w-100" alt="...">
+        <img src="faq.jpg" class="d-block w-100" alt="...">
       </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
