--- a/reactwork/public/index.html
+++ b/reactwork/public/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>App Title</title>
+  <title>Missing Grade Site</title>
+  <link rel="icon" href="ugfavicon.jpg" type="image/x-icon">
 </head>
 <body>
   <div id="root"></div>
