--- a/LoginPage.html
+++ b/LoginPage.html
@@ -12,7 +12,7 @@
   <body>
     <div>
       <header>
-        <h2 class="logo0">Logo</h2>
+        <h2 class="logo">Logo</h2>
         <nav class="navigation">
           <a href="#">Home</a>
           <a href="#">Dashboard</a>          
