--- a/InstructorContactPage.html
+++ b/InstructorContactPage.html
@@ -11,20 +11,21 @@
   </head>
 
   <body>
-    <div>
-      <header>
-        <h2 class="logo">Logo</h2>
-        <nav class="navigation">
-          <a href="#">Home</a>
-          <a href="#">Dashboard</a>          
-          <a href="#">Grades</a>
-          <a href="#">Report</a>
-          <button class="ContactButton">Contact</button>        
-          <a href="#">Help</a>
-          <a href="#">Link</a>
-        </nav>
-      </header>
-    </div>
+    <div class="BodyMain">
+      <div>
+        <header>
+          <h2 class="logo">Logo</h2>
+          <nav class="navigation">
+            <a href="#">Home</a>
+            <a href="#">Dashboard</a>          
+            <a href="#">Grades</a>
+            <a href="#">Report</a>
+            <button class="ContactButton">Contact</button>        
+            <a href="#">Help</a>
+            <a href="#">Link</a>
+          </nav>
+        </header>
+      </div>
     
       <div class="formBox">
           <h2>Contact Us</h2>
@@ -81,6 +82,7 @@
           <br>
         </div>
       </div>
+    </div>
   
       <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
       <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
