--- a/InstructorContactPage.html
+++ b/InstructorContactPage.html
@@ -52,7 +52,7 @@
                   <button id="btn" onclick="notif()">Send</button>
               </div>
           </form>
-          <p class="extra">You can also contact us at 181-1711-322</p>
+          <p class="extra">Here is more information about us<ion-icon name="arrow-down-outline"></ion-icon> </p>
       </div>
 
       <div class="ContactPane">
