--- a/InstructorContactPage.html
+++ b/InstructorContactPage.html
@@ -59,7 +59,7 @@
         <div>
           <h2 class="ContactHeader">
             <br>
-            Come Meet Us
+            Meet Us
           </h2>
         </div>
       
