--- a/HelpPage.html
+++ b/HelpPage.html
@@ -131,11 +131,11 @@
 
         <div>
             <p class="CourseTitle">
-              &#8226 <strong>About the Department</strong>
+              &#8226 <strong>Grade Reporting</strong>
             </p>
 
             <button type="button" class="collapsible">
-                Is There A Lab For Practical Examination/Classes
+                Why is my Grade not showing?
             </button>
 
             <div class="content">
