--- a/HelpPage.html
+++ b/HelpPage.html
@@ -20,8 +20,8 @@
             <a href="#">Dashboard</a>          
             <a href="#">Grades</a>
             <a href="#">Report</a>
-            <button class="ContactButton">Contact</button>        
-            <a href="#">Help</a>
+            <a href="#">Contact</a>
+            <button class="ContactButton">Help</button>                    
             <a href="#">Link</a>
           </nav>
         </header>
