--- a/InstructorContactPage.html
+++ b/InstructorContactPage.html
@@ -34,6 +34,17 @@
     </div>
 
 
+
+    <div>
+      <h1>
+        Instructors
+      </h1>
+    </div>
+
+    <br>
+    <br>
+    <br>
+    
     <div>
       <div class="row">
         <div class="column">
