made several changes to the files

--- a/login.html
+++ b/login.html
@@ -19,6 +19,10 @@
     </style>
 </head>
 <body>
+  <!-- Include Navbar -->
+<!-- Replace the URL with the correct path based on your file structure -->
+<div class="include-navbar"><?php include('navbar.html'); ?></div>
+
 
 <!-- Login Form Container -->
 <div class="container login-container">
