--- a/dashboard.html
+++ b/dashboard.html
@@ -19,6 +19,10 @@
     </style>
 </head>
 <body>
+  <!-- Include Navbar -->
+<!-- Replace the URL with the correct path based on your file structure -->
+<div class="include-navbar"><?php include('navbar.html'); ?></div>
+
 
 <!-- Dashboard Container -->
 <div class="container dashboard-container">
@@ -31,7 +35,7 @@
                 <!-- Course 1 -->
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="card-title">Course 1</h5>
+                        <h5 class="card-title">CBAS 210</h5>
                         <p class="card-text">Grade: A</p>
                     </div>
                 </div>
@@ -39,7 +43,7 @@
                 <!-- Course 2 -->
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="card-title">Course 2</h5>
+                        <h5 class="card-title">MATH 223</h5>
                         <p class="card-text">Grade: B+</p>
                     </div>
                 </div>
@@ -47,7 +51,7 @@
                 <!-- Course 3 -->
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="card-title">Course 3</h5>
+                        <h5 class="card-title">DCIT 205</h5>
                         <p class="card-text">Grade: A-</p>
                     </div>
                 </div>
@@ -55,7 +59,7 @@
                 <!-- Course 4 -->
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="card-title">Course 4</h5>
+                        <h5 class="card-title">DCIT 207</h5>
                         <p class="card-text">Grade: B</p>
                     </div>
                 </div>
@@ -63,7 +67,7 @@
                 <!-- Course 5 -->
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="card-title">Course 5</h5>
+                        <h5 class="card-title">DCIT 203</h5>
                         <p class="card-text">Grade: A</p>
                     </div>
                 </div>
@@ -71,7 +75,7 @@
                 <!-- Course 6 -->
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="card-title">Course 6</h5>
+                        <h5 class="card-title">DCIT 201</h5>
                         <p class="card-text">Grade: B-</p>
                     </div>
                 </div>
