--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
                 <a class="nav-link" href="#">Home</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Login</a>
+                <a class="nav-link" href="login.html">Login</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">About</a>
+                <a class="nav-link" href="dashboard.html">Dashboard</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Contact</a>
