added the grade report page

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <a class="nav-link" href="dashboard.html">Dashboard</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Contact</a>
+                <a class="nav-link" href="grade-report_page.html">Grade Report</a>
             </li>
         </ul>
     </div>
