missing-grade form page

--- a/index.html
+++ b/index.html
@@ -68,6 +68,8 @@
     </div>
 </div>
 
+<a href="missing-grade.html">Missing-grade form</a>
+
 <!-- Footer -->
 <footer class="footer mt-5">
     <div class="container text-center">
