added the instructors page and few editing to hpage

--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
     </div>
 </div>
 
-<a href="missing-grade.html">Missing-grade form</a>
+<a href="missing-grade.html">Missing-grade form</a><br>
+<a href="instructor.html">Instructors page</a>
 
 <!-- Footer -->
 <footer class="footer mt-5">
