final changes being made to css and related components

--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
  
      <!-- Icons -->
      <!-- <link href="landing/css/fontawesome.css" rel="stylesheet" type="text/css"> -->
-     <link href="landing/css/themify.css" rel="stylesheet" type="text/css">
+     <!-- <link href="landing/css/themify.css" rel="stylesheet" type="text/css"> -->
  
      <!-- flat Icons -->
      <link href="landing/css/flaticon.css" rel="stylesheet" type="text/css">
