--- a/missing-grades/public/index.html
+++ b/missing-grades/public/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Abdul-Rashid Mubarak Wumpini" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Missing-Grades Report Website"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
