--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
 </div>
 
 <a href="missing-grade.html">Missing-grade form</a><br>
-<a href="instructor.html">Instructors page</a>
+<a href="instructor.html">Instructors page</a><br>
+<a href="faq.html">FAQ</a>
 
 <!-- Footer -->
 <footer class="footer mt-5">
