--- a/instructor.html
+++ b/instructor.html
@@ -34,19 +34,19 @@
             <ul class="list-group">
                 <!-- Instructor 1 -->
                 <li class="list-group-item">
-                    <h5>Instructor Name 1</h5>
+                    <h5>Dr.Michael Soli</h5>
                     <p>Email: instructor1@example.com</p>
                 </li>
 
                 <!-- Instructor 2 -->
                 <li class="list-group-item">
-                    <h5>Instructor Name 2</h5>
+                    <h5>Dr.Mark Atta</h5>
                     <p>Email: instructor2@example.com</p>
                 </li>
 
                 <!-- Instructor 3 -->
                 <li class="list-group-item">
-                    <h5>Instructor Name 3</h5>
+                    <h5>Dr.Gabriel Armah</h5>
                     <p>Email: instructor3@example.com</p>
                 </li>
             </ul>
@@ -56,9 +56,9 @@
                 <div class="form-group">
                     <label for="recipient">Select an Instructor:</label>
                     <select class="form-control" id="recipient">
-                        <option value="instructor1">Instructor Name 1</option>
-                        <option value="instructor2">Instructor Name 2</option>
-                        <option value="instructor3">Instructor Name 3</option>
+                        <option value="instructor1">Dr. Michael Abgo Soli</option>
+                        <option value="instructor2">Dr Mark Mensah</option>
+                        <option value="instructor3">Dr Armah Gabriel</option>
                     </select>
                 </div>
 
